Refs #76 restored product drop-down width & scrollbar fix.

--- a/css/intermediary.css
+++ b/css/intermediary.css
@@ -340,21 +340,21 @@ tr.upms td {
 	list-style:none;
 	/*padding: 2px 10px 2px 0px;*/
 	float:left;
-	width:130px;
+	width:auto;
 	margin:0px
 }
 
 #nav li {
 	float:left;
 	position:relative;
-	width:130px;
+	width:auto;
 	text-align:center;
 	background-color:#D5D3E6;
 }
 
 #nav a {
 	display:block;
-	padding: 2px 10px 2px 0px;
+	padding: 2px 12px 2px 0px;
 	background-color:#D5D3E6;
 }
 #nav a:hover{
@@ -363,7 +363,8 @@ tr.upms td {
 }
 
 #nav li .arrow {
-	background: url(../images/dropdown.png) right center no-repeat; 
+	background: url(../images/dropdown.png) no-repeat right center ; 
+	margin: 2px;
 }
 /*--- DROPDOWN ---*/
 #nav ul {
@@ -372,15 +373,19 @@ tr.upms td {
 	list-style:none;
 	position:absolute;
 	left:-9999px; /* Hide off-screen when not needed (this is more accessible than display:none;) */
+	width:150px;
+	max-height: 300px;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 #nav ul li{
 	border-top: 1px solid #FFFFFF;
 	float:left;
 	text-align:left;
+	width:150px;
 }
 
 #nav ul a{
-	white-space:nowrap; /* Stop text wrapping and creating multi-line dropdown items */
 	margin-left: 5px;
 }
 #nav li:hover ul{ /* Display the dropdown on hover */
